<resources>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Delete Account</string>
    <string name="status">Status</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="delete_account_label">Delete account</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="login_twitter">Twitter Login</string>
    <string name="login_email_wrong">Please enter a valid Email address.</string>
    <string name="app_name">ProCheck</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_shutdown">Shutdown</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_internet">No Internet connection</string>
    <string name="news_position">#1</string>
    <string name="news_image">Image for News</string>
    <string name="news_title">Title</string>
    <string name="news_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="news_page">Page</string>
    <string name="news_creationtime">7 Jan</string>
    <string name="news_edittime">12 Jan</string>
    <string name="dropdown_menu">Dropdown-Menu</string>
    <string name="menu_trash">Move to trash</string>
    <string name="menu_trash_all">Move all to trash</string>
    <string name="menu_search">Search article</string>
    <string name="permission_title_1">We need some permissions to run this APP!</string>
    <string name="permission_title_2">Dropdown-Menu</string>
    <string name="permission_title_3">You have declined the required permissions, please grant them from your phone settings.</string>
    <string name="permission_title_4">You have granted all required permissions!</string>
    <string name="permission_title_5">Permissions Required</string>
    <string name="bottom_button">more News...</string>
    <string name="profil_username">Username</string>
    <string name="profil_email">user@email.de</string>
    <string name="left_nav_news">News</string>
    <string name="left_nav_scan">Scan Article</string>
    <string name="left_nav_settings">Settings</string>
    <string name="left_nav_testscan">Test-Scan</string>
    <string name="left_nav_camera">Camera</string>
    <string name="left_nav_login">Login</string>
    <string name="left_nav_divider_1">Account</string>
    <string name="left_nav_divider_2">Communicate</string>
    <string name="left_nav_profile">Profile</string>
    <string name="left_nav_shopping_list">Shopping List</string>
    <string name="nav_pantry_list">Stock</string>
    <string name="nav_ingredients_list">Ingredients-Filter</string>
    <string name="nav_filter_list">Filters</string>
    <string name="left_nav_favorites">Favorites</string>
    <string name="left_nav_logout">Logout</string>
    <string name="left_nav_share">Share</string>
    <string name="left_nav_impressum">Impressum</string>
    <string name="no_entry">No entry found</string>
    <string name="no_authentication">No or invalid API Key</string>
    <string name="option_write">Write permission (not editable)</string>
    <string name="option_read">Read permission (not editable)</string>
    <string name="option_internet">Internet permission (not editable)</string>
    <string name="option_torch">Scanner flashlight</string>
    <string name="option_clear_cache">Clear cache</string>
    <string name="button_clear">Clear</string>
    <string name="toast_clear_cache">Cache erased</string>
    <string name="option_filter_1">Nur RSPO Palmöl (RSPO Zertifiziert)</string>
    <string name="option_filter_2">Kein Palmöl (Ohne Palmöl als Zutat)</string>
    <string name="option_filter_3">Vegetarisch (Vegetarisch zertifiziert)</string>
    <string name="option_filter_4">Vegetarisch (Vegetarisch laut Zutatenliste)</string>
    <string name="option_filter_5">Vegan (Vegan zertifiziert)</string>
    <string name="option_filter_6">Vegan (Vegan laut Zutatenliste)</string>
    <string name="option_filter_7">Ohne zugesetzten Zucker (laut Zutatenliste)</string>
    <string name="option_filter_8">Gluten frei (Glutenfrei zertifiziert)</string>
    <string name="option_filter_9">Laktose frei (Laktosefrei zertifiziert)</string>
    <string name="login_authentification">Authenticating...</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_image">Logo</string>
    <string name="login_no_account">No account yet? Create one</string>
    <string name="login_username_wrong">between 4 and 10 alphanumeric characters</string>
    <string name="login_password_wrong">between 4 and 10 alphanumeric characters</string>
    <string name="login_title">Login</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_create_account_btn">Create Account</string>
    <string name="signup_already_member">Already a member? Login</string>
    <string name="signup_image">Logo</string>
    <string name="signup_title">Registration</string>
    <string name="signup_create_account">Creating Account...</string>
    <string name="signup_failed">Account not created</string>
    <string name="signup_success">Account created</string>
    <string name="signup_name_wrong">at least 3 characters</string>
    <string name="signup_email_wrong">enter a valid email address</string>
    <string name="signup_password_wrong">between 4 and 10 alphanumeric characters</string>
    <string name="signup_password_equal">Password is not equal</string>
    <string name="hello_impressum_fragment">Fragment</string>
    <string name="api_key">kqRjhKm46hkqdwshJhCGtsyNSdVK72iB</string>
    <string name="twitter_consumer_key">TUuvMUJWv1ApGj6fr8zyttcxG</string>
    <string name="twitter_consumer_secret">3gJhg0YX8OjShs0bxG45AWnfp5N1pV0n0nJcwmACFg9FjgvB7q</string>
    <string name="image_key_left">Image Key Left</string>
    <string name="image_key_right">Image Key Right</string>
    <string name="allergenic_image">Image for the allergenic alert</string>
    <string name="allergenic_message">The chosen article violates the following filter citeria:</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="description">Description</string>
    <string name="preparation">No Preparation</string>
    <string name="traces">No Traces</string>
    <string name="site">www.google.de</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_preparation">Preparation</string>
    <string name="label_traces">Traces</string>
    <string name="label_site">Website</string>
    <string name="label_lipid">Lipid</string>
    <string name="label_totLipid">Lipid Sat.</string>
    <string name="label_sugar">Sugar</string>
    <string name="label_salt">Salt</string>
    <string name="label_count">1g</string>
    <string name="article_allergenic">Allergenic</string>
    <string name="article_title">Article</string>
    <string name="article_brand">Brand</string>
    <string name="article_nutrition">Nutrition</string>
    <string name="article_rating">Rating</string>
    <string name="article_zertificate">Zertificate</string>
    <string name="article_company">Company</string>
    <string name="article_recycling">Recycling</string>
    <string name="article_ingredients">Ingredients</string>
    <string name="article_making">Making</string>
    <string name="image_title">Image</string>
    <string name="zertificate_name">No Zertificate</string>
    <string name="zertificate_description">No Zertificate description</string>
    <string name="device_name">Frying</string>
    <string name="making_step">1°C</string>
    <string name="making_time">00:15</string>
    <string name="making_duration">Dauer</string>
    <string name="making_temp">Temp</string>
    <string name="making_description">Put the Turkey without the plastic in the microwave.</string>
    <string name="store_name">Fridge</string>
    <string name="store_temp">bei 7 Grad halbar bis siehe Packung</string>
    <string name="store_howToStore">Lagerung: </string>
    <string name="store_storeType">lichteinfluß</string>
    <string name="recycling_image">Image for Recycling</string>
    <string name="recycling_name">No Recycling</string>
    <string name="recycling_description">No Recycling description</string>
    <string name="trash_name">No Trash</string>
</resources>