<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listSingleLayoutStore"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imgViewStore"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_title"
        app:srcCompat="@color/icons" />

    <TextView
        android:id="@+id/txtStoreViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgViewStore"
        android:text="@string/store_name"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStoreViewTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStoreViewName"
        android:layout_toEndOf="@+id/imgViewStore"
        android:text="@string/store_temp"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStoreViewHowTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStoreViewTemp"
        android:layout_toEndOf="@+id/imgViewStore"
        android:text="@string/store_howToStore"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStoreViewType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStoreViewHowTo"
        android:layout_toEndOf="@+id/imgViewStore"
        android:text="@string/store_storeType"
        android:textColor="@color/primary_text"
        android:textSize="15sp" />

</RelativeLayout>