<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/threeDots"
        android:icon="@mipmap/ic_more_vert_white"
        android:orderInCategory="101"
        android:title="@string/dropdown_menu"
        app:showAsAction="ifRoom">
            <menu>

                <item
                    android:id="@+id/action_settings"
                    android:orderInCategory="1"
                    android:title="@string/action_settings"
                    android:icon="@mipmap/ic_settings_black"
                    app:showAsAction="never" />

                <item android:id="@+id/action_shutdown"
                    android:orderInCategory="2"
                    android:title="@string/action_shutdown"
                    android:icon="@mipmap/ic_power_settings_black"
                    app:showAsAction="never" />

            </menu>
    </item>

</menu>
