<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listSingleLayoutZertificate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imgViewZertificate"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_title"
        app:srcCompat="@color/icons" />

    <TextView
        android:id="@+id/txtZertificateViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imgViewZertificate"
        android:text="@string/zertificate_name"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtZertificateViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtZertificateViewName"
        android:text="@string/zertificate_description"
        android:textColor="@color/primary_text"
        android:textSize="15sp" />

</RelativeLayout>